--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -511,13 +511,13 @@
    "id": "d1789048",
    "metadata": {},
    "source": [
-    "##### 8. Create a funcion to check a single password. The code should check different conditions, and raise exceptions for each failed condition, so that the code does not stop at the first failure. The conditions are:\n",
+    "##### 8. Create a funcion to check a single password. The function should check different conditions, and raise exceptions for each failed condition, so that the code does not stop at the first failure. The conditions are:\n",
     "- lenght of password\n",
     "- contains at least one uppercase letter\n",
     "- contains at least one special character\n",
     "- no spaces allowed\n",
     "\n",
-    "##### The conditions are given as parameters to the function, so that eventually not all conditions have to be checked."
+    "##### The conditions (as the password to be check) are given as parameters to the function, so that eventually not all conditions have to be checked."
    ]
   },
   {
@@ -526,7 +526,18 @@
    "id": "d48f5dd0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def password_check(password: str, checks: tuple[int,bool, bool, bool]) -> str:\n",
+    "\n",
+    "    special_char = \"!@#$%^&*(),./?:;<>\"\n",
+    "\n",
+    "    error_message = []\n",
+    "\n",
+    "    if checks[0] != 0 and len(password) != len(checks[0]):\n",
+    "        error_message.append(f\"The password has to be {len(checks[0])} characters long. \")\n",
+    "\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
