--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -536,8 +536,29 @@
     "    if checks[0] != 0 and len(password) != len(checks[0]):\n",
     "        error_message.append(f\"The password has to be {len(checks[0])} characters long. \")\n",
     "\n",
-    "    \n"
+    "    if checks[1] and any(password.isupper()):\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7e46aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pa = \"jfjffjfjfjdie\"\n",
+    "\n",
+    "if any(pa.isupper()):\n",
+    "    print(\"g\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5703bfca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
