--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -522,10 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d48f5dd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "The password has to be 12 characters long. \nThe password need at least one uppercase character.\nThe password need at least one special character.\nThe password have at least one space. That's not allowed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mException\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 61\u001b[39m\n\u001b[32m     58\u001b[39m password = \u001b[33m\"\u001b[39m\u001b[33mreat password\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     59\u001b[39m password_checks = (\u001b[32m12\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m61\u001b[39m \u001b[43mpassword_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpassword_checks\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 52\u001b[39m, in \u001b[36mpassword_check\u001b[39m\u001b[34m(password, checks)\u001b[39m\n\u001b[32m     49\u001b[39m \u001b[38;5;66;03m# 5. Raise the error and display the message\u001b[39;00m\n\u001b[32m     51\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m error_message:\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m.join(error_message))\n\u001b[32m     53\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     54\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPassword accepted\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mException\u001b[39m: The password has to be 12 characters long. \nThe password need at least one uppercase character.\nThe password need at least one special character.\nThe password have at least one space. That's not allowed."
+     ]
+    }
+   ],
    "source": [
     "def password_check(password: str, checks: tuple[int,bool, bool, bool]) -> str:\n",
     "\n",
@@ -533,29 +546,80 @@
     "\n",
     "    error_message = []\n",
     "\n",
-    "    if checks[0] != 0 and len(password) != len(checks[0]):\n",
-    "        error_message.append(f\"The password has to be {len(checks[0])} characters long. \")\n",
+    "    # 1 Check lenght\n",
     "\n",
-    "    if checks[1] and any(password.isupper()):\n"
+    "    if checks[0] != 0 and len(password) != checks[0]:\n",
+    "        error_message.append(f\"The password has to be {checks[0]} characters long. \")\n",
+    "\n",
+    "    # 2. Check uppercase\n",
+    "\n",
+    "    if checks[1]:\n",
+    "\n",
+    "        upper = False\n",
+    "\n",
+    "        for char in password:\n",
+    "\n",
+    "            if char.isupper():\n",
+    "\n",
+    "                upper = True\n",
+    "\n",
+    "        if not upper:\n",
+    "\n",
+    "            error_message.append(f\"The password need at least one uppercase character.\")\n",
+    "\n",
+    "    # 3. Check special case\n",
+    "\n",
+    "    if checks[2]:\n",
+    "\n",
+    "        special = False\n",
+    "\n",
+    "        for char in password:\n",
+    "\n",
+    "            if char in special_char:\n",
+    "\n",
+    "                special = True\n",
+    "\n",
+    "        if not special:\n",
+    "\n",
+    "            error_message.append(f\"The password need at least one special character.\")\n",
+    "\n",
+    "    # 4. Check for spaces\n",
+    "\n",
+    "    if checks[3] and ' ' in password:\n",
+    "        error_message.append(\"The password have at least one space. That's not allowed.\")\n",
+    "\n",
+    "    # 5. Raise the error and display the message\n",
+    "\n",
+    "    if error_message:\n",
+    "            raise Exception(\"\\n\".join(error_message))\n",
+    "    else:\n",
+    "        print(\"Password accepted\")\n",
+    "\n",
+    "\n",
+    "        \n",
+    "password = \"reat password\"\n",
+    "password_checks = (12, True, True, True)\n",
+    "\n",
+    "password_check(password, password_checks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d7e46aaa",
+   "execution_count": 5,
+   "id": "5703bfca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pa = \"jfjffjfjfjdie\"\n",
+    "ggg =[]\n",
     "\n",
-    "if any(pa.isupper()):\n",
+    "if ggg:\n",
     "    print(\"g\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5703bfca",
+   "id": "d60baa01",
    "metadata": {},
    "outputs": [],
    "source": []
