--- a/oops.ipynb
+++ b/oops.ipynb
@@ -952,6 +952,37 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01b12798",
+   "metadata": {},
+   "source": [
+    "##### 16. Create an inventory system for a museum. The system should be able to answer to following questions:\n",
+    "- How many items are in the inventory?\n",
+    "- How many artifacts were made in a specific century?\n",
+    "- The name of the artifacts\n",
+    "- The author of the artifacts\n",
+    "##### The inventory is divided in two main classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a56e58d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Artwork:\n",
+    "\n",
+    "    def __init__(self, date: int, name: str, author: str):\n",
+    "\n",
+    "        self.data = date\n",
+    "        self.name = name\n",
+    "        self.author = author\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
