--- a/oops.ipynb
+++ b/oops.ipynb
@@ -963,7 +963,7 @@
     "- How many artifacts were made in a specific century?\n",
     "- The name of the artifacts\n",
     "- The author of the artifacts\n",
-    "##### The inventory is divided in two main classes."
+    "##### The inventory is divided in two main classes. Give at least two method for each class."
    ]
   },
   {
@@ -975,13 +975,31 @@
    "source": [
     "class Artwork:\n",
     "\n",
-    "    def __init__(self, date: int, name: str, author: str):\n",
+    "    def __init__(self, date: int, name: str, author: str, type: str) -> None:\n",
     "\n",
-    "        self.data = date\n",
+    "        self.date = date\n",
     "        self.name = name\n",
     "        self.author = author\n",
+    "        self.type = type\n",
     "\n",
-    "        "
+    "    def __str__(self) -> str:\n",
+    "\n",
+    "        return f\"In the musuem: {self.name}, made by {self.author} in {self.date}. It is a {self.type}\"\n",
+    "    \n",
+    "class Inventory:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "\n",
+    "        self.inventory = []\n",
+    "\n",
+    "    def add_artwork(self, artwork: Artwork) -> None:\n",
+    "\n",
+    "        self.inventory.append(artwork)\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "\n",
+    "        return f\"The musem has {len(self.inventory)} pieces.\"\n",
+    "\n"
    ]
   }
  ],
