--- a/oops.ipynb
+++ b/oops.ipynb
@@ -998,9 +998,17 @@
     "\n",
     "    def __str__(self) -> str:\n",
     "\n",
-    "        return f\"The musem has {len(self.inventory)} pieces.\"\n",
+    "        return f\"The museum has {len(self.inventory)} pieces.\"\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "327e20ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
