--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -443,6 +443,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "509f8550",
+   "metadata": {},
+   "source": [
+    "##### 13. Create a function that takes a pattern string, a replacement string, and a  two filename as parameters. If the first file contains the pattern string, replace it with the replacement string and save the changes. Consider also to hnadle eventual errors, like file not found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87624f59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to create the \"old\" file. It will be made in order to have a \"pattern\".\n",
+    "\n",
+    "pattern_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\pattern_file.txt\"\n",
+    "\n",
+    "pattern = \"* In the late days, * it was exceptionally rare * to spot an airplane flying over the sky, * and it was marvelous.\"\n",
+    "\n",
+    "with open(pattern_file, \"w\") as file:\n",
+    "\n",
+    "    file.write(pattern)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# We can now prceed with the actual task.\n",
+    "\n",
+    "def sed(pattern: str, replacement: str, first_file: str, second_file: str) :\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        with open(first_file, \"r\") as file_1:\n",
+    "            with open(second_file, \"w\") as renewed:\n",
+    "\n",
+    "                source = file_1.read()\n",
+    "\n",
+    "                for char in source:\n",
+    "\n",
+    "                    source = char.replace(pattern, replacement)\n",
+    "\n",
+    "                    renewed.write(source)\n",
+    "    \n",
+    "    except FileNotFoundError:\n",
+    "        print(\"The file was not found\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error, {e}\")  \n",
+    "\n",
+    "\n",
+    "sed(\"*\", \"\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\pattern_file.txt\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\renewed_file.txt\")    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "57acdf98",
