--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -452,10 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "87624f59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file was not found\n"
+     ]
+    }
+   ],
    "source": [
     "# We need to create the \"old\" file. It will be made in order to have a \"pattern\".\n",
     "\n",
@@ -493,7 +501,7 @@
     "        print(f\"Unexpected error, {e}\")  \n",
     "\n",
     "\n",
-    "sed(\"*\", \"\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\pattern_file.txt\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\renewed_file.txt\")    \n",
+    "sed(\"*\", \"\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\pattern_fie.txt\", r\"C:\\Users\\zanca\\OneDrive\\Desktop\\renewed_file.txt\")    \n",
     "\n",
     "\n",
     "\n"
