--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1003,12 +1003,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c80d4227",
+   "metadata": {},
+   "source": [
+    "##### 17-A. Create a class named Person that takes as arguments the name and surname. Create a second class Author which inherits all the attributes from the class Person. Author has a third attribute which is genre of their book. The class Author should have a _str_ method as well which allows an Author object to be neatly printeD.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "327e20ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name: str, surname: str)-> None:\n",
+    "\n",
+    "        self.nama = name\n",
+    "        self.surname = surname\n",
+    "\n",
+    "    \n",
+    "class Author(Person):\n",
+    "\n",
+    "    def __init__(self, name:str, surname: str, genre: str)-> None:\n",
+    "\n",
+    "        self.genre = genre\n",
+    "        super().__init__(name,surname)\n",
+    "\n",
+    "    def __str__(self)->str:\n",
+    "\n",
+    "        return f\"The books of {self.name} {self.surname} are mainly {self.genre}\""
+   ]
   }
  ],
  "metadata": {
