--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "327e20ec",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1021,7 @@
     "\n",
     "    def __init__(self, name: str, surname: str)-> None:\n",
     "\n",
-    "        self.nama = name\n",
+    "        self.name = name\n",
     "        self.surname = surname\n",
     "\n",
     "    \n",
@@ -1030,12 +1030,44 @@
     "    def __init__(self, name:str, surname: str, genre: str)-> None:\n",
     "\n",
     "        self.genre = genre\n",
-    "        super().__init__(name,surname)\n",
+    "        super(). __init__(name,surname)\n",
     "\n",
     "    def __str__(self)->str:\n",
     "\n",
-    "        return f\"The books of {self.name} {self.surname} are mainly {self.genre}\""
+    "        return f\"The books of {self.name} {self.surname} are mainly {self.genre}\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b7cd4bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_creature(filename:str)-> Creature:\n",
+    "\n",
+    "    with open(filename) as file:\n",
+    "        creature_file = file.read()\n",
+    "\n",
+    "        for line in creature_file:\n",
+    "\n",
+    "            if line.startswith(\"NAME:\"):\n",
+    "                name = line[len(\"NAME:\"):].strip()\n",
+    "\n",
+    "            if line.startswith(\"TYPE:\"):\n",
+    "                type = line[len(\"TYPE:\"):].strip()\n",
+    "\n",
+    "            if line.startswith(\"AGE:\"):\n",
+    "                age = line[len(\"AGE:\"):].strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fe3048",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
