--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1050,21 +1050,93 @@
     "        creature_file = file.read()\n",
     "\n",
     "        for line in creature_file:\n",
-    "\n",
+    "            \n",
+    "            # check in the name\n",
     "            if line.startswith(\"NAME:\"):\n",
     "                name = line[len(\"NAME:\"):].strip()\n",
-    "\n",
+    "                if not name:\n",
+    "                    raise ValueError(\"Missing name 'Creature'.\")\n",
+    "            # check on the type    \n",
     "            if line.startswith(\"TYPE:\"):\n",
     "                type = line[len(\"TYPE:\"):].strip()\n",
-    "\n",
+    "                if not type:\n",
+    "                    raise ValueError(\"Missing type 'Creature'.\")\n",
+    "            # checks on age\n",
     "            if line.startswith(\"AGE:\"):\n",
-    "                age = line[len(\"AGE:\"):].strip()\n"
+    "                age = line[len(\"AGE:\"):].strip()\n",
+    "                if not age:\n",
+    "                    raise ValueError(\"Missing age 'Creature'.\")\n",
+    "                if not isinstance(age,int):\n",
+    "                    raise ValueError(\"Invalid age 'not_a_number'. Age must be a non-negative integer.\")\n",
+    "                if age < 0:\n",
+    "                        raise ValueError(f\"Invalid age {age}. Age must be non-negative\")\n",
+    "\n",
+    "            #check on char art_start and art_end, then collect the char in between start and end\n",
+    "\n",
+    "            if \"ART_START\" not in line:\n",
+    "                raise ValueError(\"Missing ART_START marker.\")\n",
+    "            if \"ART_END\" not in line:\n",
+    "                raise ValueError(\"Missing ART_END marker.\")\n",
+    "            \n",
+    "\n",
+    "            ascii = ''\n",
+    "\n",
+    "            if line.startswith(\"ART_START:\") and line.endswith(\"ART_END\"):\n",
+    "                ascii += line\n",
+    "\n",
+    "            creature = Creature(name, type, ascii, age)\n",
+    "\n",
+    "            return creature\n",
+    "\n",
+    "            \n",
+    "                \n",
+    "\n",
+    "\n",
+    "\n",
+    "             \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "                \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "41fe3048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "empty name\n"
+     ]
+    }
+   ],
+   "source": [
+    "cul = \"NAME: \"\n",
+    "\n",
+    "cil = cul[len(\"NAME:\"):].strip()\n",
+    "\n",
+    "print(cil)\n",
+    "\n",
+    "if not cil:\n",
+    "    print(\"empty name\"\"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fe3048",
+   "id": "bfe0a836",
    "metadata": {},
    "outputs": [],
    "source": []
