--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1039,17 +1039,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b7cd4bb",
+   "execution_count": 26,
+   "id": "8c37c30f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Creature:\n",
+    "    \"\"\"An ASCII-based creature.\"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        name: str,\n",
+    "        creature_type: str,\n",
+    "        art: str,\n",
+    "        age: int = 1,\n",
+    "    ) -> None:\n",
+    "        self.name = name\n",
+    "        self.creature_type = creature_type\n",
+    "        self.art = art\n",
+    "        self.age = age\n",
+    "\n",
+    "    def display(self) -> None:\n",
+    "        \"\"\"Show in the terminal all class properties.\"\"\"\n",
+    "        print(f\"{self.name}\")\n",
+    "        print(f\"Type: {self.creature_type}\")\n",
+    "        print(f\"Age: {self.age}\")\n",
+    "        print(self.art)\n",
+    "\n",
+    "    def roar(self) -> None:\n",
+    "        \"\"\"Show in the terminal a creature announcement.\"\"\"\n",
+    "        msg = (\n",
+    "            f\"\\n{self.name} roars: \"\n",
+    "            f'\"ROAR! I\\'m a {self.age}-year-old {self.creature_type}!\"'\n",
+    "        )\n",
+    "        print(msg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "0b7cd4bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid format: Missing ART_START marker.\n"
+     ]
+    }
+   ],
    "source": [
     "def load_creature(filename:str)-> Creature:\n",
     "\n",
     "    with open(filename) as file:\n",
-    "        creature_file = file.read()\n",
+    "        creature_file = file.readlines()\n",
+    "        #print(creature_file)\n",
+    "\n",
+    "        name = ''\n",
+    "        type = ''\n",
+    "        age = 1\n",
+    "        ascii = ''\n",
+    "\n",
+    "        if \"ART_START\" not in creature_file:\n",
+    "            raise ValueError(\"Missing ART_START marker.\")\n",
+    "        if \"ART_END\" not in creature_file:\n",
+    "            raise ValueError(\"Missing ART_END marker.\")\n",
     "\n",
     "        for line in creature_file:\n",
+    "\n",
     "            \n",
     "            # check in the name\n",
     "            if line.startswith(\"NAME:\"):\n",
@@ -1063,7 +1121,7 @@
     "                    raise ValueError(\"Missing type 'Creature'.\")\n",
     "            # checks on age\n",
     "            if line.startswith(\"AGE:\"):\n",
-    "                age = line[len(\"AGE:\"):].strip()\n",
+    "                age = int(line[len(\"AGE:\"):].strip())\n",
     "                if not age:\n",
     "                    raise ValueError(\"Missing age 'Creature'.\")\n",
     "                if not isinstance(age,int):\n",
@@ -1073,34 +1131,51 @@
     "\n",
     "            #check on char art_start and art_end, then collect the char in between start and end\n",
     "\n",
-    "            if \"ART_START\" not in line:\n",
-    "                raise ValueError(\"Missing ART_START marker.\")\n",
-    "            if \"ART_END\" not in line:\n",
-    "                raise ValueError(\"Missing ART_END marker.\")\n",
+    "    \n",
     "            \n",
     "\n",
     "            ascii = ''\n",
     "\n",
-    "            if line.startswith(\"ART_START:\") and line.endswith(\"ART_END\"):\n",
+    "            if line.startswith(\"ART_START\") and line.endswith(\"ART_END\"):\n",
     "                ascii += line\n",
     "\n",
     "            creature = Creature(name, type, ascii, age)\n",
     "\n",
-    "            return creature\n",
+    "        return creature\n",
+    "        \n",
     "\n",
-    "            \n",
-    "                \n",
+    "try:\n",
+    "    dragon = load_creature(r\"C:\\Users\\zanca\\OneDrive\\Desktop\\NAME Fluffy the Dragon.txt\")\n",
+    "    dragon.display()\n",
+    "    dragon.roar()\n",
     "\n",
+    "except FileNotFoundError:\n",
+    "    print(\"File not found!\")\n",
     "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Invalid format: {e}\")                     \n",
+    "                       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bfe0a836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "gil = \"cnu_dd dmfo mfmf\"\n",
     "\n",
-    "             \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "                \n",
-    "\n",
+    "if \"cnu_dd\" in gil:\n",
+    "    print(\"ok\")\n",
     "\n",
     "\n",
     "\n",
@@ -1109,34 +1184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "41fe3048",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "empty name\n"
-     ]
-    }
-   ],
-   "source": [
-    "cul = \"NAME: \"\n",
-    "\n",
-    "cil = cul[len(\"NAME:\"):].strip()\n",
-    "\n",
-    "print(cil)\n",
-    "\n",
-    "if not cil:\n",
-    "    print(\"empty name\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "bfe0a836",
+   "id": "e0c334d0",
    "metadata": {},
    "outputs": [],
    "source": []
