--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "id": "0b7cd4bb",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1085,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid format: Missing ART_START marker.\n"
+      "Fluffy the Dragon\n",
+      "Type: Fire Dragon\n",
+      "Age: 150\n",
+      "\n",
+      "\n",
+      "Fluffy the Dragon roars: \"ROAR! I'm a 150-year-old Fire Dragon!\"\n"
      ]
     }
    ],
@@ -1101,10 +1106,13 @@
     "        age = 1\n",
     "        ascii = ''\n",
     "\n",
-    "        if \"ART_START\" not in creature_file:\n",
-    "            raise ValueError(\"Missing ART_START marker.\")\n",
-    "        if \"ART_END\" not in creature_file:\n",
-    "            raise ValueError(\"Missing ART_END marker.\")\n",
+    "        # if \"Fire\" in creature_file:\n",
+    "        #     print(\"ghghghghghghghg\")\n",
+    "\n",
+    "        # if \"ART_START\" not in creature_file:\n",
+    "        #     raise ValueError(\"Missing ART_START marker.\")\n",
+    "        # if \"ART_END\" not in creature_file:\n",
+    "        #     raise ValueError(\"Missing ART_END marker.\")\n",
     "\n",
     "        for line in creature_file:\n",
     "\n",
@@ -1136,7 +1144,7 @@
     "\n",
     "            ascii = ''\n",
     "\n",
-    "            if line.startswith(\"ART_START\") and line.endswith(\"ART_END\"):\n",
+    "            if line.startswith(\"ART_START\"):\n",
     "                ascii += line\n",
     "\n",
     "            creature = Creature(name, type, ascii, age)\n",
@@ -1159,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "id": "bfe0a836",
    "metadata": {},
    "outputs": [
@@ -1172,9 +1180,12 @@
     }
    ],
    "source": [
-    "gil = \"cnu_dd dmfo mfmf\"\n",
+    "gil = \"cnu_dd dmfo mfmf\" \\\n",
+    "\"klklkl\" \\\n",
+    "\"lklkl\" \\\n",
+    "\"ll\"\n",
     "\n",
-    "if \"cnu_dd\" in gil:\n",
+    "if 'u' in gil:\n",
     "    print(\"ok\")\n",
     "\n",
     "\n",
