--- a/functions.ipynb
+++ b/functions.ipynb
@@ -510,12 +510,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31ffda61",
+   "metadata": {},
+   "source": [
+    "##### 13. We need a program that takes a lyrics on a txt file, and give back the unique words(used only once) and an alphabetical ordered list of the words used more than once."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17520e6a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34munique_words\u001b[39m(file_path:\u001b[38;5;28mstr\u001b[39m) -> \u001b[43mSet\u001b[49m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[32m      3\u001b[39m     unique = \u001b[38;5;28mset\u001b[39m()\n\u001b[32m      4\u001b[39m     special_char = \u001b[33m\"\u001b[39m\u001b[33m,.;-:!?\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'Set' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def unique_words(file_path:str) -> Set[str]:\n",
+    "\n",
+    "    unique = set()\n",
+    "    special_char = \",.;-:!?\"\n",
+    "\n",
+    "    with open(file_path, \"r\") as file:\n",
+    "        lyrics = file.read()\n",
+    "\n",
+    "        cleaned_lyrics = ''\n",
+    "\n",
+    "        for char in lyrics:\n",
+    "            if char.lower() not in special_char:\n",
+    "                cleaned_lyrics += char.lower()\n",
+    "            else:\n",
+    "                cleaned_lyrics += ' '\n",
+    "\n",
+    "        list_lyrics = cleaned_lyrics.split()\n",
+    "\n",
+    "        for word in list_lyrics:\n",
+    "\n",
+    "            if not list_lyrics.count(word) > 1:\n",
+    "                unique.add(word)\n",
+    "\n",
+    "    return unique\n",
+    "\n",
+    "\n",
+    "def histogram(file_path:str) -> Dict[str,int]:\n",
+    "\n",
+    "    histogram = {}\n",
+    "    special_char = \",.;:-!?\"\n",
+    "\n",
+    "    with open(file_path) as file:\n",
+    "        lyrics = file.read()\n",
+    "\n",
+    "        cleaned_lyrics = ''\n",
+    "\n",
+    "        for char in lyrics:\n",
+    "            if char.lower() not in special_char:\n",
+    "                cleaned_lyrics += char.lower()\n",
+    "            else:\n",
+    "                cleaned_lyrics += ' '\n",
+    "        \n",
+    "        list_lyrics = cleaned_lyrics.split()\n",
+    "\n",
+    "    for word in list_lyrics:\n",
+    "        if word not in histogram:\n",
+    "            histogram[word] = 1\n",
+    "        else:\n",
+    "            histogram[word] += 1\n",
+    "    \n",
+    "    return histogram\n",
+    "\n",
+    "\n",
+    "def analyze_lyrics(lyrics: str)->Tuple[Set[str],Dict[str,int]]:\n",
+    "\n",
+    "    unique = unique_words(lyrics)\n",
+    "    histo = histogram(lyrics)\n",
+    "\n",
+    "    return unique,histo\n",
+    "\n",
+    "\n",
+    "\n",
+    "stringola = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\blam_blam.txt\"\n",
+    "\n",
+    "results = analyze_lyrics(stringola)\n",
+    "#print(results)\n",
+    "print(f\"Unique words in the song ({len(results[0])}):\\n\\t\", results[0])\n",
+    "print(f\"Word histogram (# words:{len(results[1])}):\\n\\t\", results[1])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
