--- a/functions.ipynb
+++ b/functions.ipynb
@@ -519,24 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "17520e6a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Set' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34munique_words\u001b[39m(file_path:\u001b[38;5;28mstr\u001b[39m) -> \u001b[43mSet\u001b[49m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[32m      3\u001b[39m     unique = \u001b[38;5;28mset\u001b[39m()\n\u001b[32m      4\u001b[39m     special_char = \u001b[33m\"\u001b[39m\u001b[33m,.;-:!?\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'Set' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique words in the song (45):\n",
+      " {'made', 'school', 'that', '17', 'rudeness', '15', 'gonna', 'york', 'news', 'new', 'how', 'confused', 'about', 'set', 'with', 'gone', 'did', 'tat', 'nra', 'buy', 'bit', 'am', 'deal', 'way', 'number', 'obscene', 'his', 'seen', 'crime', 'chap', 'times', 'rudie', 'ra', 'town', 'lord', 'r', 'of', 'cap', 'by', 'means', 'tata', 'he', 'not', '2', 'think'}\n",
+      "Word histogram (# words:81):\n",
+      " {'did': 1, 'you': 7, 'read': 4, 'the': 39, 'news': 1, 'i': 2, 'am': 1, 'a': 7, 'bit': 1, 'confused': 1, 'gun': 23, 'fever': 28, 'is': 22, 'back': 6, 'rudeness': 1, 'and': 2, 'it': 11, 'talk': 2, 'of': 1, 'this': 3, 'town': 1, 'every': 3, 'time': 3, 'clean': 2, 'or': 4, 'star': 2, 'man': 3, 'shot': 2, 'dead': 3, 'rude': 3, 'at': 2, 'war': 2, 'simplest': 3, 'thing': 3, 'blam': 6, 'what': 4, 'in': 3, 'our': 2, 'little': 2, 'island': 2, 'can': 2, 'know': 2, 'chap': 1, 'by': 1, 'way': 1, 'he': 1, 'set': 1, 'his': 1, 'cap': 1, 'rudie': 1, 'seen': 1, 'lord': 1, 'do': 2, 'not': 1, 'means': 1, 'we': 2, 'gonna': 1, 'about': 1, 'made': 1, 'number': 1, '2': 1, 'think': 1, 'obscene': 1, 'buy': 1, 'r': 1, '15': 1, 'new': 1, 'york': 1, 'times': 1, '17': 1, 'school': 1, 'gone': 1, 'crime': 1, 'ra': 1, 'tata': 1, 'tat': 1, 'nra': 1, 'how': 1, 'deal': 1, 'with': 1, 'that': 1}\n"
      ]
     }
    ],
    "source": [
-    "def unique_words(file_path:str) -> Set[str]:\n",
+    "def unique_words(file_path:str) -> set[str]:\n",
     "\n",
     "    unique = set()\n",
     "    special_char = \",.;-:!?\"\n",
@@ -562,7 +561,7 @@
     "    return unique\n",
     "\n",
     "\n",
-    "def histogram(file_path:str) -> Dict[str,int]:\n",
+    "def histogram(file_path:str) -> dict[str,int]:\n",
     "\n",
     "    histogram = {}\n",
     "    special_char = \",.;:-!?\"\n",
@@ -589,7 +588,7 @@
     "    return histogram\n",
     "\n",
     "\n",
-    "def analyze_lyrics(lyrics: str)->Tuple[Set[str],Dict[str,int]]:\n",
+    "def analyze_lyrics(lyrics: str)->tuple[set[str],dict[str,int]]:\n",
     "\n",
     "    unique = unique_words(lyrics)\n",
     "    histo = histogram(lyrics)\n",
@@ -602,10 +601,18 @@
     "\n",
     "results = analyze_lyrics(stringola)\n",
     "#print(results)\n",
-    "print(f\"Unique words in the song ({len(results[0])}):\\n\\t\", results[0])\n",
-    "print(f\"Word histogram (# words:{len(results[1])}):\\n\\t\", results[1])\n",
+    "print(f\"Unique words in the song ({len(results[0])}):\\n\",results[0])\n",
+    "print(f\"Word histogram (# words:{len(results[1])}):\\n\",results[1])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d83fd6d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
