--- a/oops.ipynb
+++ b/oops.ipynb
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "8c37c30f",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "id": "0b7cd4bb",
    "metadata": {},
    "outputs": [
@@ -1085,12 +1085,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fluffy the Dragon\n",
-      "Type: Fire Dragon\n",
-      "Age: 150\n",
+      "\n",
+      "Type: \n",
+      "Age: 1\n",
       "\n",
       "\n",
-      "Fluffy the Dragon roars: \"ROAR! I'm a 150-year-old Fire Dragon!\"\n"
+      " roars: \"ROAR! I'm a 1-year-old !\"\n"
      ]
     }
    ],
@@ -1098,7 +1098,7 @@
     "def load_creature(filename:str)-> Creature:\n",
     "\n",
     "    with open(filename) as file:\n",
-    "        creature_file = file.readlines()\n",
+    "        creature_file = file.read()\n",
     "        #print(creature_file)\n",
     "\n",
     "        name = ''\n",
@@ -1106,27 +1106,28 @@
     "        age = 1\n",
     "        ascii = ''\n",
     "\n",
-    "        # if \"Fire\" in creature_file:\n",
-    "        #     print(\"ghghghghghghghg\")\n",
+    "       \n",
     "\n",
-    "        # if \"ART_START\" not in creature_file:\n",
-    "        #     raise ValueError(\"Missing ART_START marker.\")\n",
-    "        # if \"ART_END\" not in creature_file:\n",
-    "        #     raise ValueError(\"Missing ART_END marker.\")\n",
+    "        if \"ART_START\" not in creature_file:\n",
+    "            raise ValueError(\"Missing ART_START marker.\")\n",
+    "        if \"ART_END\" not in creature_file:\n",
+    "            raise ValueError(\"Missing ART_END marker.\")\n",
     "\n",
     "        for line in creature_file:\n",
     "\n",
     "            \n",
-    "            # check in the name\n",
+    "            # check on the name\n",
     "            if line.startswith(\"NAME:\"):\n",
     "                name = line[len(\"NAME:\"):].strip()\n",
     "                if not name:\n",
     "                    raise ValueError(\"Missing name 'Creature'.\")\n",
+    "                \n",
     "            # check on the type    \n",
     "            if line.startswith(\"TYPE:\"):\n",
     "                type = line[len(\"TYPE:\"):].strip()\n",
     "                if not type:\n",
     "                    raise ValueError(\"Missing type 'Creature'.\")\n",
+    "                \n",
     "            # checks on age\n",
     "            if line.startswith(\"AGE:\"):\n",
     "                age = int(line[len(\"AGE:\"):].strip())\n",
@@ -1163,34 +1164,6 @@
     "except ValueError as e:\n",
     "    print(f\"Invalid format: {e}\")                     \n",
     "                       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "bfe0a836",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "gil = \"cnu_dd dmfo mfmf\" \\\n",
-    "\"klklkl\" \\\n",
-    "\"lklkl\" \\\n",
-    "\"ll\"\n",
-    "\n",
-    "if 'u' in gil:\n",
-    "    print(\"ok\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
