--- a/strings.ipynb
+++ b/strings.ipynb
@@ -653,9 +653,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7a620e6",
+   "metadata": {},
+   "source": [
+    "##### 17. Count the number of a specific letter in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8857ba54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter = \"s\"\n",
+    "sentence = \"Tomorrow will be surely going to surf in Santa Monica.\"\n",
+    "\n",
+    "amount_s = sentence.lower().count(letter)\n",
+    "\n",
+    "print(amount_s)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8857ba54",
+   "id": "63164975",
    "metadata": {},
    "outputs": [],
    "source": []
