--- a/strings.ipynb
+++ b/strings.ipynb
@@ -684,9 +684,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f44c31ed",
+   "metadata": {},
+   "source": [
+    "##### 18. Count how many times a word is repeated in a sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "63164975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"know\"\n",
+    "sentence = \"You know, is tuff here. If you do not know how to survive, you know, it may be complicated.\"\n",
+    "\n",
+    "amount_know = sentence.count(word)\n",
+    "\n",
+    "print(amount_know)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63164975",
+   "id": "f8cfcbd3",
    "metadata": {},
    "outputs": [],
    "source": []
