--- a/strings.ipynb
+++ b/strings.ipynb
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "63164975",
    "metadata": {},
    "outputs": [
@@ -712,6 +712,47 @@
     "amount_know = sentence.count(word)\n",
     "\n",
     "print(amount_know)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8b23b62",
+   "metadata": {},
+   "source": [
+    "##### 19. Count vowels in a string still usign .count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "548cfb71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 4\n",
+      "e : 3\n",
+      "i : 2\n",
+      "o : 6\n",
+      "u : 1\n",
+      "Total vowels: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowels = 'aeiou'\n",
+    "sentence = 'The day after tomorrow is a popular movie of...'\n",
+    "\n",
+    "amount_vowels = 0\n",
+    "\n",
+    "for char in vowels:\n",
+    "    if char.lower() in sentence:\n",
+    "        amount_vowels += sentence.count(char)\n",
+    "        print(char, \":\" , sentence.count(char))\n",
+    "\n",
+    "print(\"Total vowels:\", amount_vowels)"
    ]
   },
   {
