--- a/strings.ipynb
+++ b/strings.ipynb
@@ -756,9 +756,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b9810e0",
+   "metadata": {},
+   "source": [
+    "##### 20. Using count, how many times a substring appears in a string?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8cfcbd3",
+   "id": "6505c5d1",
    "metadata": {},
    "outputs": [],
    "source": []
