--- a/lists.ipynb
+++ b/lists.ipynb
@@ -795,6 +795,26 @@
     "print(\"Third non-repeated element in the said list:\")\n",
     "print(f\"{result}\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dde878c9",
+   "metadata": {},
+   "source": [
+    "##### 21. Convert a list of string in a string using .join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16cf6f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title = [\"The\", \"Sorrows\", \"of\", \"Young\", \"Werther\"]\n",
+    "\n",
+    "print(title.join())"
+   ]
   }
  ],
  "metadata": {
