--- a/strings.ipynb
+++ b/strings.ipynb
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "548cfb71",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,11 @@
    "id": "6505c5d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "target = \"aa\"\n",
+    "string = \"aaaa\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
