--- a/lists.ipynb
+++ b/lists.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0bc6da65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "K\n",
+      "y\n",
+      "m\n"
+     ]
+    }
+   ],
    "source": [
     "full_name: str = \"Kamil Ashardy\"\n",
     "\n",
@@ -55,10 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3b2013b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 55, 300, 400, 88, 34, 35, 422, 2, 90, 500]\n"
+     ]
+    }
+   ],
    "source": [
     "first_list = [22,55,4,88,34,35,422,2,90,12]     # expected output: [22,55,300,400,88,34,35,422,2,90,500]\n",
     "\n",
@@ -83,10 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2fed500d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "19.4\n"
+     ]
+    }
+   ],
    "source": [
     "numb_list = [3,1,33,5,14,72,8]\n",
     "\n",
@@ -110,10 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "58bc8ee7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "straight = [0,1,2,3,4,5,6,7,8,9]\n",
     "\n",
@@ -137,10 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "54457ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 7, 11, 4, 23, 9]\n",
+      "[4, 49, 121, 16, 529, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "basic_list = [2,7,11,4,23,9]\n",
     "print(basic_list)\n",
@@ -161,10 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "45a6d57f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 7, 4, 9, 6, 232, 5]\n",
+      "3\n",
+      "232\n"
+     ]
+    }
+   ],
    "source": [
     "other_list = [3,11,7,4,9,6,232,5]\n",
     "\n",
@@ -185,10 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "098d7252",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 5, 2, 3, 77, 9, 3, 45, 654, 3, 90, 59, 90]\n",
+      "4\n",
+      "2\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "listone = [3,11,5,2,3,77,9,3,45,654,3,90,59,90]\n",
     "print(listone)\n",
@@ -209,10 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "82ed8840",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 5, 2, 77, 9, 45, 654, 90, 59]\n",
+      "[2, 3, 5, 9, 11, 45, 59, 77, 90, 654]\n",
+      "[654, 90, 77, 59, 45, 11, 9, 5, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "listone = [3,11,5,2,77,9,45,654,90,59]\n",
     "\n",
@@ -234,10 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9aa6eb0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 3, 5, 'a', 'r', 't', 'y']\n"
+     ]
+    }
+   ],
    "source": [
     "list_uno = [1,4,3,5]\n",
     "list_due = ['a','r','t','y']\n",
@@ -257,10 +343,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "134c41cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['friend', '', 'lawyer', 'parent', '', 'doctor', '', 'driver']\n",
+      "['friend', 'lawyer', 'parent', 'doctor', 'driver']\n"
+     ]
+    }
+   ],
    "source": [
     "words_list = ['friend','','lawyer','parent','','doctor','','driver']\n",
     "new_words_list = []\n",
@@ -286,10 +381,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "181cd416",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "duplicates = [1, 2, 2, 3, 1, 4, 5, 4]\n",
     "\n",
@@ -310,10 +413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "86600b76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 44, 22, 7, 23, 78, 34]\n",
+      "['Carl', 'Ella', 'Amber', 'Michal', 'Lumber']\n"
+     ]
+    }
+   ],
    "source": [
     "mixed_list = [1, 'Carl', 44, 'Ella', 22, 'Amber', 7, 23, 78, 'Michal', 'Lumber', 34]\n",
     "\n",
@@ -337,10 +449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c1b6ad88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carl\n",
+      "Ella\n",
+      "Amber\n",
+      "Michal\n",
+      "Lumber\n"
+     ]
+    }
+   ],
    "source": [
     "nested_list = [1, 'Carl', 44, ['Ella', 22, 'Amber', 7, 23], 78, 'Michal', ['Lumber', 34]]\n",
     "\n",
@@ -366,10 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b80cf8dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['My', 'name', 'is', 'Kelly']\n",
+      "My name is Kelly "
+     ]
+    }
+   ],
    "source": [
     "first_conc =  [\"M\", \"na\", \"i\", \"Ke\"]\n",
     "second_conc = [\"y\", \"me\", \"s\", \"lly\"]\n",
@@ -398,10 +531,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "95d62ae0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 400\n",
+      "20 300\n",
+      "30 200\n",
+      "40 100\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [10, 20, 30, 40]\n",
     "list2 = [100, 200, 300, 400]\n",
@@ -423,10 +567,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b12a9098",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, [300, [5000, 6000, 7000], 500], 30, 40]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_lists = [10, 20, [300, [5000, 6000], 500], 30, 40] \n",
     "\n",
@@ -445,10 +597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0ebf9e6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 7\n",
+      "9 1\n",
+      "[1, 3, 6, 23, 8, 9, 1, 7, 4, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "list_mix = [1,3,6,23,\"eight\",9,1,7,4,\"TWo\"]\n",
     "#print(list_mix)\n",
@@ -483,10 +645,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7c44571c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 3, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = input(\"Give a serie of integer numbers separeted by comma.\")\n",
     "\n",
@@ -511,10 +681,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1479246e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "def intersection(list_1, list_2):\n",
     "\n",
@@ -553,10 +732,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5b1c0fc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1}\n",
+      "First non-repeated element in the said list:\n",
+      "1\n",
+      "\n",
+      "{1: 2, 2: 2, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1}\n",
+      "Second non-repeated element in the said list:\n",
+      "3\n",
+      "\n",
+      "{1: 3, 2: 2, 3: 2, 8: 2}\n",
+      "Third non-repeated element in the said list:\n",
+      "None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def not_repeated(random_number:list[int])-> int:\n",
     "\n",
@@ -604,6 +802,128 @@
    "metadata": {},
    "source": [
     "##### 21. Convert a list of string in a string using .join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9f8b9225",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Sorrows of Young Werther\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = [\"The\", \"Sorrows\", \"of\", \"Young\", \"Werther\"]\n",
+    "\n",
+    "print(\" \".join(title))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0fac573",
+   "metadata": {},
+   "source": [
+    "##### 22. Convert a string into a csv line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dda65ce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name,surname,age,addres,profession\n"
+     ]
+    }
+   ],
+   "source": [
+    "headers = 'name surname age addres profession'\n",
+    "\n",
+    "header_list = headers.split()\n",
+    "\n",
+    "print(\",\".join(header_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57ff677f",
+   "metadata": {},
+   "source": [
+    "##### 23. Encrypt a password intervally entering an asterisk (*) after every 3 characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "06db3ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password: dragonfly\n",
+      "Encrypted: dra*gon*fly\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = \"dragonfly\"\n",
+    "\n",
+    "cifr_password = ''\n",
+    "\n",
+    "for ind, char in enumerate(password):\n",
+    "    if ind % 3 == 0 and ind != 0:\n",
+    "        cifr_password += \"*\"\n",
+    "        cifr_password += char\n",
+    "    else:\n",
+    "        cifr_password += char\n",
+    "\n",
+    "print(f\"Password: {password}\\nEncrypted: {cifr_password}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05bdd89b",
+   "metadata": {},
+   "source": [
+    "##### 24. Using ASCII characters, create a little piece of art. The art should be stored inside a list of strings where each string is a line of your masterpiece. Finally print it out line by line to create the full image using join() or a simple loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "affa53e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ^_^  \n",
+      " (O,O) \n",
+      " (   ) \n",
+      "  \" \" \n"
+     ]
+    }
+   ],
+   "source": [
+    "ascii_list = [\"  ^_^  \", \" (O,O) \", \" (   ) \", '  \" \" ']\n",
+    "\n",
+    "#print(\"\\n\".join(ascii_list))\n",
+    "\n",
+    "for element in ascii_list:\n",
+    "    print(element)"
    ]
   }
  ],
